# SoloClaw

./: .env.example  .gitignore  README.md  agent.py  bot.py  config.py  conversations.py  db.py  main.py  memory.py  prompts.py  pyproject.toml  scheduler.py
prompts/: claude_md_template.md
